feat: new handle list all enterprises
